# tacotron

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  Pipfile  README.md  cli.py  dependencies.md  inferred.mel.npy  original.mel.npy  pylintrc  pyproject.toml  setup.cfg  setup.py
src/: cli.py
src/tacotron/: __init__.py  analysis.py  analysis.tests.py  audio_utils.py  checkpoint.py  checkpoint_handling.py  dataloader.py  eval_checkpoints.py  globals.py  hparams.py  image_utils.py  inference.py  layers.py  logger.py  logging.py  model.py  model_checkpoint.py  model_weights.py  parser.py  statistics.py  stft.py  stress_detection.py  synthesizer.py  taco_stft.py  tone_detection.py  training.py  typing.py  utils.py  validation.py
src/tacotron/app/: __init__.py  analysis.py  defaults.py  eval_checkpoints.py  inference.py  inference_v2.py  io.py  training.py  validation.py  weights.py
src/tacotron/core/: __init__.py  accent_symbols.py  accent_symbols.tests.py  checkpoint_handling.py  dataloader.py  eval_checkpoints.py  hparams.py  inference.py  logger.py  model.py  model_checkpoint.py  model_symbols.tests.py  model_weights.py  parser.py  statistics.py  synthesizer.py  training.py  typing.py  utils.py  validation.py
src/tacotron/frontend/: arpa_symbols.py  ipa_symbols.py  main.py  stress_detection.py  tone_detection.py
src/tacotron_cli/: __init__.py  analysis.py  argparse_helper.py  cli.py  defaults.py  eval_checkpoints.py  helper.py  inference.py  io.py  logging_configuration.py  mel_creation.py  textgrid_inference.py  training.py  validation.py  weights.py
src/tacotron_tests/: test_analysis.py  test_tone_detection.py  test_utils.py
src/tacotron_tests/core/: test_model_weights.py
src/tacotron_tests/synthesizer_py/: test_Synthesizer.py
src/tacotron_tests/utils_py/: test_cut_string.py
src/tests/: test_utils.py
tacotron/: __init__.py  analysis.py  checkpoint.py  globals.py  utils.py
tacotron/app/: __init__.py  analysis.py  convert.py  defaults.py  eval_checkpoints.py  inference.py  io.py  training.py  validation.py
tacotron/core/: __init__.py  dataloader.py  eval_checkpoints.py  hparams.py  inference.py  layers.py  logger.py  model.py  model_acc.py  model_checkpoint.py  model_symbols.py  model_weights.py  model_weights.tests.py  synthesizer.py  training.py  validation.py
tacotron/core/inference/: synthesizer.py  validation.py
