[metadata]
name = tacotron
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Tacotron."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/tacotron.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    librosa
    plotly
    torch<=1.7.1
    scikit-image
    matplotlib
    tqdm
    wget
    numpy
    scikit-learn
    scipy
    text_utils@git+https://github.com/stefantaubert/text-utils.git@master
    audio_utils@git+https://github.com/stefantaubert/audio-utils.git@master
    image_utils@git+https://github.com/stefantaubert/image-utils.git@master
    mcd@git+https://github.com/jasminsternkopf/mel_cepstral_distance.git@main

[options.packages.find]
where = src
